# Calculator

./: CMakeLists.txt  README.md  calc_ui.h  calculator.ui  main.cpp
